--- a/demo.html
+++ b/demo.html
@@ -126,6 +126,17 @@
 
     </div>
 
+
+
+    <footer class="clearfix">
+        <div class="ink-grid">
+            <ul class="unstyled inline half-vertical-space">
+                <li class="active"><i class="fa fa-github"></i> <a href="https://github.com/celso/inkmorse">Github code</a></li>
+            </ul>
+            <p class="note">Celso Martinho</p>
+        </div>
+    </footer>
+
     <script type="text/javascript">
 
     Ink.requireModules(['Ink.Dom.Event_1','Ink.Ext.Morse_1'],function( InkEvent, MorseObject ){
